objects/Rule_Check__c.object
<CustomObject>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Optima_Customer_Code__c</fullName>
        <label>Optima Customer Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rule_Check_Legacy_ID__c</fullName>
        <label>Rule Check Legacy ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Rule Check</label>
    <nameField>
        <displayFormat>RC-{000}</displayFormat>
        <label>Rule Check Link</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rule Checks</pluralLabel>
    <recordTypes>
        <fullName>Contract</fullName>
        <active>true</active>
        <label>Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>Release</fullName>
        <active>true</active>
        <label>Release</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>